# tf-m-iat-poc

./: .env.example  .gitignore  .gitmodules  dbgkey_gen.py  justfile  pyproject.toml
app/: .gitignore  CMakeLists.txt  main.c  syscalls_stub.c  utils.c  utils.h
app/microrl/: CMakeLists.txt
report/: main.typ
tf-m-patches/: 0001-start-crypto-before-its.patch  0002-fix-bl2-wrapper.patch  0003-add-rp2350-attest-hal.patch  README.md
verifier/: mcuboot_tlv.py  verify.py
